--- a/serie-node/package.json
+++ b/serie-node/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "meat-api",
+  "name": "serie-node",
   "version": "1.0.0",
-  "description": "API de Restaurantes",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^5.9.10",
-    "restify": "^8.5.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.11"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.7.14",
-    "@types/restify": "^8.4.2"
+    "nodemon": "^2.0.3"
   }
 }
